2004-09-29  Richard Henderson  <rth@redhat.com>

	PR 17739
	* tree-gimple.c (is_gimple_reg): Reject hard registers.
	(is_gimple_asm_val): New.
	* tree-gimple.h (is_gimple_asm_val): Declare.
	* gimplify.c (gimplify_asm_expr): Use it.
	* tree-pretty-print.c (print_declaration): Dump hard regs.
	* tree-outof-ssa.c (check_replaceable): Don't check for hard regs.
	* tree-ssa-copyrename.c (copy_rename_partition_coalesce): Likewise.
	* tree-ssa-pre.c (is_undefined_value): Likewise.
	* tree-ssa-copy.c (may_propagate_copy): Likewise.
	(may_propagate_copy_into_asm): Protect DECL_HARD_REGISTER.
	* tree-ssa.c (warn_uninit): Likewise.
	* tree.h (DECL_HARD_REGISTER): Check for VAR_DECL.

2004-09-29  Fariborz Jahanian <fjahanian@apple.com>

	* c-decl.c (merge_decls): Use comptype when comparing
	types to decide on DECL_SIZE save of olddecl.

2004-09-29  Daniel Berlin  <dberlin@dberlin.org>

	* tree.h (INDIRECT_REF_P): New macro.
	* alias.c (get_alias_set): Use it
	(nonoverlapping_memrefs_p): Ditto.
	* emit-rtl.c (mem_expr_equal_p): Ditto.
	(set_mem_attributes_minus_bitpos): Ditto.
	(is_gimple_addressable): Ditto.
	(get_base_address): Ditto.
	* tree-ssa-alias.c (find_ptr_derefernece): Ditto.
	* tree-ssa-dce.c (mark_stmt_if_obviously_necessary): Ditto.
	* tree-ssa-dom.c (record_equivalences_from_stmt): Ditto.
	* tree-ssa-loop-im.c (is_call_clobbered_ref): Ditto.
	* tree-ssa-loop-ivopts.c (find_interesting_uses_address): Ditto.
	(add_address_candidates): Ditto.
	(rewrite_address_base): Ditto.

2004-09-30  Ben Elliston  <bje@au.ibm.com>

	* tree-flow.h (struct bb_ann_d): Remove num_preds member.
	* tree-into-ssa.c (rewrite_into_ssa): Don't set it.
	(rewrite_ssa_into_ssa): Likewise.
	* tree-phinodes.c (create_phi_node): Access the number of
	predecessor edges using EDGE_COUNT() and not num_preds.

2004-09-29  Joseph S. Myers  <jsm@polyomino.org.uk>

	PR c/7425
	* c-decl.c (merge_decls): Merge TREE_DEPRECATED.

2004-09-29  Eric Christopher  <echristo@redhat.com>
